_build/_log
### Starting build.
# Target: db.mli.depends, tags: { package(opium), package(ounit2), package(sqlite3), package(yojson), extension:mli, file:db.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package yojson -package ounit2 -package sqlite3 -package opium -modules db.mli > db.mli.depends # cached
# Target: db.cmi, tags: { package(opium), package(ounit2), package(sqlite3), package(yojson), byte, compile, extension:mli, file:db.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -package yojson -package ounit2 -package sqlite3 -package opium -o db.cmi db.mli # cached
# Target: db.ml.depends, tags: { package(opium), package(ounit2), package(sqlite3), package(yojson), extension:ml, file:db.ml, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package yojson -package ounit2 -package sqlite3 -package opium -modules db.ml > db.ml.depends # cached
# Target: db.cmo, tags: { package(opium), package(ounit2), package(sqlite3), package(yojson), byte, compile, extension:cmo, extension:ml, file:db.cmo, file:db.ml, implem, ocaml, quiet, traverse }
ocamlfind ocamlc -c -package yojson -package ounit2 -package sqlite3 -package opium -o db.cmo db.ml # cached
# Target: dbquery.mli.depends, tags: { package(opium), package(ounit2), package(sqlite3), package(yojson), extension:mli, file:dbquery.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package yojson -package ounit2 -package sqlite3 -package opium -modules dbquery.mli > dbquery.mli.depends
# Target: dbquery.cmi, tags: { package(opium), package(ounit2), package(sqlite3), package(yojson), byte, compile, extension:mli, file:dbquery.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -package yojson -package ounit2 -package sqlite3 -package opium -o dbquery.cmi dbquery.mli
+ ocamlfind ocamlc -c -package yojson -package ounit2 -package sqlite3 -package opium -o dbquery.cmi dbquery.mli
ocamlfind: [WARNING] Package `threads': Linking problems may arise because of the missing -thread or -vmthread switch
# Target: dbquery.ml.depends, tags: { package(opium), package(ounit2), package(sqlite3), package(yojson), extension:ml, file:dbquery.ml, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package yojson -package ounit2 -package sqlite3 -package opium -modules dbquery.ml > dbquery.ml.depends
# Target: dbquery.cmo, tags: { package(opium), package(ounit2), package(sqlite3), package(yojson), byte, compile, extension:cmo, extension:ml, file:dbquery.cmo, file:dbquery.ml, implem, ocaml, quiet, traverse }
ocamlfind ocamlc -c -package yojson -package ounit2 -package sqlite3 -package opium -o dbquery.cmo dbquery.ml
+ ocamlfind ocamlc -c -package yojson -package ounit2 -package sqlite3 -package opium -o dbquery.cmo dbquery.ml
ocamlfind: [WARNING] Package `threads': Linking problems may arise because of the missing -thread or -vmthread switch
# Target: main.ml.depends, tags: { package(opium), package(ounit2), package(sqlite3), package(yojson), extension:ml, file:main.ml, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package yojson -package ounit2 -package sqlite3 -package opium -modules main.ml > main.ml.depends # cached
# Target: main.cmo, tags: { package(opium), package(ounit2), package(sqlite3), package(yojson), byte, compile, extension:cmo, extension:ml, file:main.cmo, file:main.ml, implem, ocaml, quiet, traverse }
ocamlfind ocamlc -c -package yojson -package ounit2 -package sqlite3 -package opium -o main.cmo main.ml
+ ocamlfind ocamlc -c -package yojson -package ounit2 -package sqlite3 -package opium -o main.cmo main.ml
ocamlfind: [WARNING] Package `threads': Linking problems may arise because of the missing -thread or -vmthread switch
File "main.ml", line 26, characters 8-19:
26 |      |> Bcrypt.hash 
             ^^^^^^^^^^^
Error: Unbound module Bcrypt
Command exited with code 2.
# Compilation unsuccessful.
